Builder: remove style attribute, use auto always